--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,21 @@ header h1{
     margin-top: 20px;
 }  
 
+nav li {
+    font-size: 15px;
+}
+
+li a {
+    border: 1px solid;
+    color: #5c433f;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 400;
+}
+
+a:hover {
+    text-decoration: none;
+}
+
 .nav-pills>li.active>a:hover,
 .product button:hover,
 footer a:hover {
@@ -30,4 +45,77 @@ footer a:hover {
     color: #fff;
 }
 
+.featured {
+    margin-bottom: 60px;
+}
 
+.product {
+    background-color: #eeddcd;
+    border-radius: 5%;
+    border: 5px solid rgb(252, 252, 252);
+}
+.img_box {
+    margin: 10px 0px;
+}
+.product button {
+    margin-bottom: 10px;
+    background-color: rgb(252,252,252);
+    border: 1px solid #5c433f;
+}
+aside a .product, footer {
+    background-color:#eeddcd;
+}
+
+footer {
+    padding-top: 20px;
+    max-height: 100%;
+}
+
+footer a {
+    color: #5c433f;
+}
+
+footer img{
+    height: 90px;
+}
+.contact_info {
+    padding-top: 15px;
+    padding-left: 40px;
+    border-right: 1px solid #333;
+    border-left: 1px solid #333;
+}
+
+.social {
+    padding-top: 15px;
+}
+
+footer .fine_print {
+    margin-top: 10px;
+    margin-bottom: 15p;
+    color: #333;
+}
+
+@media (max-width: 768px) {
+    .centered {
+        float: none;
+        margin: 0 auto;
+    }
+}
+
+nav {
+    padding-top: 0px;
+    padding-bottom: 10px;
+    top: 5px;
+}
+
+.social {
+    text-align: center;
+    font-size: 25px;
+}
+
+.social i {
+    margin: 20px 10px 0px;
+}
+aside {
+    margin-bottom: 60px;
+}
